--- a/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Workouts" asp-action="Index">FitnessApp</a>
+                <a class="navbar-brand" asp-controller="Workouts" asp-action="Index">FitnessApp</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,24 +21,23 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Workouts" asp-action="Index"><i class="bi bi-gem"></i>Workouts</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Workouts" asp-action="Index"> Workouts</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="WorkoutTypes" asp-action="Index"> Workout Types</a>
                         </li>
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                            aria-haspopup ="true" aria-expanded="false"><i class="bi bi-gear"></i>Management
-                        </a>
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="Sponsors" asp-action="Index"> Sponsors</a>
+                        </li>
 
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-controller="WorkoutTypes" asp-action="Index"> <i class="bi bi-hammer"></i>Workout Types</a>
-                                <a class="dropdown-item" asp-controller="Sponsors" asp-action="Index"> <i class="bi bi-piggy-bank"></i>Sponsors</a>
-                                <a class="dropdown-item" asp-controller="Athletes" asp-action="Index"> <i class="bi bi-person-square"></i>Athletes</a>
-                        </div>
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="Athletes" asp-action="Index"> Athletes</a>
                         </li>
                     </ul>
 
                     <form class="form-inline my-2 my-lg-0" asp-controller="Workouts" asp-action="Filter" style="padding-right: 25px;">
-                        <input name="searchString" type="text" class="form-control" placeholder="Search for a workout...">
+                        <input name="searchString" type="text" style="padding-bottom: 5px;" placeholder="Search for a workout..." aria-label="Recipient's username" aria-describedby="button-addon2">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
 
