Add Sponsor CRUD Operations and Views

--- a/FitnessApp_PreslavZlatinov_19621621/Views/Athletes/Details.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Athletes/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Athlete
 
 @{
-    ViewData["Title"] = "Add a new athlete";
+    ViewData["Title"] = "Details of the Athlete";
 }
 
 <div class="row text">
