--- a/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Index.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Index.cshtml
@@ -15,13 +15,7 @@
                             <p class="card-text">
                                 <h5 class="card-title">
                                     @item.Name
-
-                                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
-                                    {
-                                        <a class="btn btn-outline-dark float-right" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-
-                                    }
-
+                                    <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
                                 </h5>
                             </p>
                         </div>
@@ -32,7 +26,12 @@
                     <div class="col-md-6">
                         <div class="card-body">
                             <p class="card-text">@item.Description</p>
-                            <p class="card-text"><b>Workout Type: </b>@item.Name</p>
+                            <p class="card-text">
+                                <b>Workout Type: </b>
+                                <a asp-controller="WorkoutTypes" asp-action="Details" asp-route-id="@item.WorkoutId">
+                                    @item.WorkoutType.Name
+                                </a>
+                            </p>
                             <p class="card-text"><b>Experience: </b>@item.WorkoutExperience</p>
                             <p class="card-text"><b>Train Days per Week: </b>@item.Days</p>
                             <p class="card-text"><b>Goal: </b>@item.Goal</p>
@@ -44,7 +43,7 @@
                         <div class="card-footer ">
                             <p class="card-text">
                                 <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
-                                    Show Details
+                                    <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
                                 <a class="btn btn-success text-white" asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-route-id="@item.Id">
                                     Add to Cart (Price @item.Price.ToString("c"))
@@ -57,3 +56,5 @@
         </div>
     }
 </div>
+
+@await Html.PartialAsync("_CreateItem", "Workouts")
