Add PayPal Integration

--- a/FitnessApp_PreslavZlatinov_19621621/Views/Orders/Index.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Orders/Index.cshtml
@@ -16,6 +16,7 @@
                     <th>Order ID</th>
                     <th>Items</th>
                     <th>Total</th>
+                    <th>User</th>
                 </tr>
             </thead>
             <tbody>
