--- a/FitnessApp_PreslavZlatinov_19621621/Views/_ViewImports.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using FitnessApp_PreslavZlatinov_19621621
 @using FitnessApp_PreslavZlatinov_19621621.Models
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
