--- a/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Identity.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Identity.cshtml
@@ -15,28 +15,28 @@ else
 {
 
     @*User profile section*@
-    <div class="dropdown">
-        <button class="btn btn-outline-success dropdown-toggle" type="button" id="profile-btn" data-toggle="dropdown"
-                aria-expanded="false">
-            <i class="bi bi-person-badge"></i> Hello @UserManager.GetUserName(User)
-        </button>
+        <div class="dropdown">
+            <button class="btn btn-outline-success dropdown-toggle" type="button" id="profile-btn" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                <i class="bi bi-person-badge"></i> Hello @UserManager.GetUserName(User)
+            </button>
         <ul class="dropdown-menu" aria-labelledby="profile-btn">
-            <li>
-                <a class="dropdown-item" asp-controller="Orders" asp-action="Index">
-                    Orders
-                </a>
-            </li>
+                <li>
+                    <a class="dropdown-item" asp-controller="Orders" asp-action="Index">
+                        <i class="bi bi-list"></i> Orders
+                    </a>
+                </li>
 
             @if (User.IsInRole("Admin"))
             {
-                <li>
-                    <a class="dropdown-item" asp-controller="Account" asp-action="Users">
-                        <i class="bi bi-people"></i> Users
-                    </a>
-                </li>
+                        <li>
+                            <a class="dropdown-item" asp-controller="Account" asp-action="Users">
+                                <i class="bi bi-people"></i> Users
+                            </a>
+                        </li>
             }
-        </ul>
-    </div>
+            </ul>
+        </div>
     <span style="padding: 5px;"></span>
     <form asp-controller="Account" asp-action="Logout">
         <button class="btn btn-outline-danger my-2 my-sm-0">
