--- a/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
@@ -39,8 +39,8 @@
                         }
                     </ul>
 
-                    <form class="form-inline my-2 my-lg-0" asp-controller="Workouts" asp-action="Filter" style="padding-right: 25px;">
-                        <input name="searchString" type="text" style="padding-bottom: 5px;" placeholder="Search for a workout..." aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <form class="form-inline my-2 my-lg-0 d-flex" asp-controller="Workouts" asp-action="Filter" style="padding-right: 25px;">
+                        <input name="searchString" type="text" class="form-control" style="padding-bottom: 5px; margin-right: 10px;" placeholder="Search for a workout..." aria-label="Recipient's username" aria-describedby="button-addon2">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
 
