Add Workouts Additional Details

--- a/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Details.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Details.cshtml
@@ -34,9 +34,11 @@
                                 @Model.Sponsor.Name
                             </a>
                         </p>
+                        <p class="card-text"><b>Gender: </b>@Model.Gender</p>
                             <p class="card-text"><b>Experience: </b>@Model.WorkoutExperience</p>
                             <p class="card-text"><b>Train Days per Week: </b>@Model.Days</p>
                             <p class="card-text"><b>Goal: </b>@Model.Goal</p>
+                        <p class="card-text"><b>Equipment needed: </b>@Model.Equipment</p>
                             <p class="card-text "><b>Status: </b><span class="badge bg-success text-white">AVAILABLE</span></p>
 
                             <p class="card-text">
