--- a/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Index.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Index.cshtml
@@ -35,9 +35,11 @@
                                     @item.WorkoutType.Name
                                 </a>
                             </p>
+                            <p class="card-text"><b>Gender: </b>@item.Gender</p>
                             <p class="card-text"><b>Experience: </b>@item.WorkoutExperience</p>
                             <p class="card-text"><b>Train Days per Week: </b>@item.Days</p>
                             <p class="card-text"><b>Goal: </b>@item.Goal</p>
+                            <p class="card-text"><b>Equipment needed: </b>@item.Equipment</p>
                             <p class="card-text "><b>Status: </b><span class="badge bg-success text-white">AVAILABLE</span></p>
 
                         </div>
