--- a/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Create.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Create.cshtml
@@ -32,6 +32,11 @@
                                 <span asp-validation-for="Goal" class="text-danger"></span>
                             </div>
                             <div class="form-group">
+                                <label asp-for="Equipment" class="control-label"></label>
+                                <input asp-for="Equipment" class="form-control" />
+                                <span asp-validation-for="Equipment" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
                                 <label asp-for="Price" class="control-label"></label>
                                 <input asp-for ="Price" class="form-control"/>
                                 <span asp-validation-for="Price" class="text-danger"></span>
@@ -52,6 +57,11 @@
                                 <label asp-for="WorkoutExperience" class="control-label"></label>
                                 <select asp-for="WorkoutExperience" class="form-control" asp-items="Html.GetEnumSelectList<WorkoutExperience>()"></select>
                                 <span asp-validation-for="WorkoutExperience" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Gender" class="control-label"></label>
+                                <select asp-for="Gender" class="form-control" asp-items="Html.GetEnumSelectList<Gender>()"></select>
+                                <span asp-validation-for="Gender" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="SponsorId" class="control-label"></label>
