Add BMR Calculator

--- a/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Calculator" asp-action="Index"> BMR Calculator</a>
+                        </li>
                         @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
