--- a/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Calculator" asp-action="Index"> BMR Calculator</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Calculator" asp-action="IndexMacros"> Macros Calculator</a>
+                        </li>
                         @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
