Design and Typo Fix

--- a/FitnessApp_PreslavZlatinov_19621621/Views/Exercises/Index.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Exercises/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "Exercise Page";
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>@ViewBag.Title</title>
@@ -29,6 +25,12 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
+
+            .exercise:hover {
+                background-color: lightblue;
+                transform: translateY(-5px);
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            }
 
             .exercise h2 {
                 font-size: 24px;
