--- a/FitnessApp_PreslavZlatinov_19621621/Views/Athletes/Index.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Athletes/Index.cshtml
@@ -21,19 +21,19 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td class="align-middle">
-                            <img class="rounded-circle" src="@item.ProfilePictureURL" alt="@item.FullName" style="max-width: 150px"/>
+                    <tr class="text-center align-middle">
+                        <td>
+                            <img class="rounded-circle" src="@item.ProfilePictureURL" alt="@item.FullName" style="max-width: 150px" />
                         </td>
-                        <td class="align-middle">
+                        <td>
                             @Html.DisplayFor(modelItem => item.FullName)
                         </td>
-                        <td class="align-middle">
+                        <td>
                             @Html.DisplayFor(modelItem => item.Bio)
                         </td>
                         @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                         {
-                            <td class="align-middle">
+                            <td class="text-center align-middle">
                                 <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i>Edit </a> |
                                 <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye"></i>Details </a> |
                                 <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete </a>
