--- a/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Create.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Workouts/Create.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-8 offset-2">
         <p>
-            <h4>Create a new workout</h4>
+            <h4>Create a New Workout</h4>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
