Add Newsletter View and Controller

--- a/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
@@ -65,6 +65,9 @@
                                 <a class="nav-link text-dark" asp-controller="Athletes" asp-action="Index"> Athletes</a>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Newsletter" asp-action="Index"> Newsletter</a>
+                        </li>
                     </ul>
 
                     <form class="form-inline my-2 my-lg-0 d-flex" asp-controller="Workouts" asp-action="Filter" style="padding-right: 25px;">
