--- a/FitnessApp_PreslavZlatinov_19621621/Views/Newsletter/Index.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Newsletter/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Newsletter";
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <style>
@@ -12,12 +8,17 @@
         }
 
         .container {
-            max-width: 400px;
+            max-width: 800px;
+            width: 100%;
             margin: 0 auto;
             padding: 20px;
             background-color: #FFFFFF;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
             .container legend {
