Add Search by Workout Experience

--- a/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 bottom: -2px;
                 width: 100%;
                 height: 2px;
-                background-color: deepskyblue; /* Change the color as desired */
+                background-color: deepskyblue;
                 z-index: -1;
             }
     </style>
