--- a/FitnessApp_PreslavZlatinov_19621621/Views/Orders/ShoppingCart.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Orders/ShoppingCart.cshtml
@@ -15,7 +15,7 @@
             <thead>
                 <tr>
                     <th>Selected amount</th>
-                    <th>Movie</th>
+                    <th>Workout</th>
                     <th>Price</th>
                     <th>Subtotal</th>
                     <th></th>
