--- a/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
+++ b/FitnessApp_PreslavZlatinov_19621621/Views/Shared/_Layout.cshtml
@@ -49,18 +49,15 @@
                         </li>
                         @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                         {
-
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Workouts" asp-action="Index"> Workouts</a>
                             </li>
                             <li>
                                 <a class="nav-link text-dark" asp-controller="WorkoutTypes" asp-action="Index"> Workout Types</a>
                             </li>
-
                             <li>
                                 <a class="nav-link text-dark" asp-controller="Sponsors" asp-action="Index"> Sponsors</a>
                             </li>
-
                             <li>
                                 <a class="nav-link text-dark" asp-controller="Athletes" asp-action="Index"> Athletes</a>
                             </li>
@@ -71,7 +68,7 @@
                     </ul>
 
                     <form class="form-inline my-2 my-lg-0 d-flex" asp-controller="Workouts" asp-action="Filter" style="padding-right: 25px;">
-                        <input name="searchString" type="text" class="form-control" style="padding-bottom: 5px; margin-right: 10px;" placeholder="Search for a workout..." aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <input name="searchString" type="text" class="form-control mr-2" style="padding-bottom: 5px;" placeholder="Search for a workout..." aria-label="Recipient's username" aria-describedby="button-addon2">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
                     </form>
 
